# tty_game

./: .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Doxyfile  GAME  LICENSE  Makefile  README.md  cmake_install.cmake  config.cmake  main.c  makefile  test.c
.archive/: test.c
docs/: README.md
docs/man/man3/: _data_data_com.termux_files_home_tty_game_src_.3  _data_data_com.termux_files_home_tty_game_src_game_.3  _data_data_com.termux_files_home_tty_game_src_game_map_.3  _data_data_com.termux_files_home_tty_game_src_game_map_cntxt_.3  _data_data_com.termux_files_home_tty_game_src_game_map_cntxt_obj_.3  _data_data_com.termux_files_home_tty_game_src_lib_.3  assert.h.3  clr.c.3  clr.h.3  (+20 more)
game/map/: obj.h  sect.h  sector.h
mod/: exit_code.h  memory.c  memory.h  misc.c  misc.h  mod_macro.h
mod/display/: color.c  color.h  doc.3  graphic.h  gridbox.c  gridbox.h  icon.c  icon.h  io.c  io.h  misc.c  output.c  output.h  window.c  window.h
mod/entity/: stat.c  stat.h
mod/map/: element.c  element.h  elements.h  room.c  room.h  stat.h
mod/memory/: memory.c  memory.h  string.c  string.h
src/: codefmt.h  main.c  scr.c  scr.h  screen.c  screen.h  tests.h
src/framework/: 3  bit.h  block.c  block.h  mem.c  mem.h
src/game/: _test.h  gm.c  gm.h  ico.c  ico.h  scr.c  scr.h  screen.c  screen.h  sect.c  sect.h  util.c  util.h  wnd.c  wnd.h
src/lib/: assert.h  debug.h  def.h  math.h  rand.c  rand.h  string.h
src/tty/: clr.c  clr.h  gfxb.c  gfxb.h  icon.c  icon.h  in.c  in.h  io.c  io.h  out.c  out.h  scrbuf.c  scrbuf.h  wnd.c  wnd.h
tty/: in.c  out.c
(+30 files in other folders)
